--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,13 @@
 
     <groupId>com.shelton.cloud</groupId>
     <artifactId>SpringCloud</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>service-server-01</module>
         <module>config-server</module>
+        <module>eureka-server</module>
+        <module>service-server-02</module>
     </modules>
 
     <properties>
